--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.10",
+    "github-markdown-css": "^5.1.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
