--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.10",
     "github-markdown-css": "^5.1.0",
+    "markdown-it": "^13.0.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
